# wq-forum

./: .gitignore  GEMINI.md  README.md  README_AGENT.md  pyproject.toml
Documents/: 10 Steps to Start on BRAIN platform.md  Alpha Examples for Beginners.md  Alpha Examples for Bronze Users.md  Alpha Examples for Silver Users.md  Brain Genius.md  Clear these tests before submitting an Alpha.md  Combo Expression.md  Consultant Dos and Don'ts.md  Consultant Features.md  Consultant Simulation Features.md  Consultant Submission Tests.md  Crowding Risk-Neutralized Alphas.md  D0.md  Double Neutralization.md  EUR TOP2500 Universe.md  Fast D1 Documentation.md  Finding Consultant Alphas.md  GLB TOPDIV3000 Universe.md  Getting Started China Research for Consultants [Gold].md  Getting started on Illiquid Universes [Gold].md  Getting started with USA TOPSP500 universe [Gold].md  Global Alphas [Gold].md  Global SuperAlphas.md  Group Data Fields.md  Helpful Tips.md  How BRAIN works.md  How to choose the Simulation Settings.md  How to use Analyst Datasets.md  How to use Earnings Dataset.md  How to use Insiders Dataset.md  How to use Institutions Dataset.md  How to use Macro Dataset.md  How to use Model Dataset.md  How to use News Dataset.md  How to use Option Dataset.md  How to use Other Dataset.md  How to use Price-Volume Dataset.md  How to use Risk Dataset.md  How to use Sentiment Dataset.md  How to use Short-Interest Dataset.md  (+34 more)
tests/: conftest.py  test_cli_mcp_contract.py  test_documents.py  test_evolution.py  test_manifest.py  test_parser_storage.py  test_search.py  (+1 more)
(+19 files in other folders)
